--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.8.2",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,6 +16,7 @@
     "lodash": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
     "rxjs": "^7.3.0",
     "styled-components": "^5.3.1",
@@ -56,6 +57,8 @@
   "repository": "git@gitlab.com:arnab8/nuffsaid-frontend-coding-challenge.git",
   "devDependencies": {
     "@types/faker": "^5.5.8",
-    "@types/lodash": "^4.14.172"
+    "@types/lodash": "^4.14.172",
+    "@types/styled-components": "^5.1.13",
+    "ts-jest": "^27.0.5"
   }
 }
